package main;
// Defines communication messages for API
// Every API call will have a Request & Response pair
import "spec.proto";

message GetProjectRootRequest {
}

message GetProjectRootResponse {
    required string projectRoot = 1;
}

message GetAllStepsRequest {
}

message GetAllStepsResponse {
    repeated string steps = 1;
}

message GetAllSpecsRequest {
}

message GetAllSpecsResponse {
    repeated ProtoSpec specs = 1;
}

message GetStepValueRequest {
    required string stepText = 1;
}

message GetStepValueResponse {
    required string stepValue = 1;
    repeated string parameters = 2;
}

message ErrorResponse {
    required string error = 1;
}

message APIMessage {
    enum APIMessageType {
        GetProjectRootRequest = 1;
        GetProjectRootResponse = 2;
        GetAllStepsRequest = 3;
        GetAllStepResponse = 4;
        GetAllSpecsRequest = 5;
        GetAllSpecsResponse = 6;
        GetStepValueRequest = 7;
        GetStepValueResponse = 8;
        ErrorResponse = 9;
    }

    required APIMessageType messageType = 1;
    required int64 messageId = 2;

    optional GetProjectRootRequest projectRootRequest = 3;
    optional GetProjectRootResponse projectRootResponse = 4;
    optional GetAllStepsRequest allStepsRequest = 5;
    optional GetAllStepsResponse allStepsResponse = 6;
    optional GetAllSpecsRequest allSpecsRequest = 7;
    optional GetAllSpecsResponse allSpecsResponse = 8;
    optional GetStepValueRequest stepValueRequest = 9;
    optional GetStepValueResponse stepValueResponse = 10;
    optional ErrorResponse error = 11;

}